--- a/src/main.html
+++ b/src/main.html
@@ -3,13 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Match Scouting - bearTracks</title>
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/grid.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
@@ -20,142 +16,28 @@
             <input type="text" value="main" name="formType" hidden>
             <h1 class="w3">bearTracks<br><span class="gametitle">match scouting</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
-            <fieldset>
-                <label>Event Code<span id="badEvent" style="color: red; display: none;"></span><br></label>
-                <select name="event" id="eventCode">
-                    <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                    <option value="WOOD">WOOD - CalGames</option>
-                    <option value="CCCC" selected>CCCC - Capital City Classic</option>
-                </select>
-            </fieldset>
-            <fieldset>
-                <label>Match Number<span id="badMatchNum" style="color: red; display: none;"></span><br></label>
-                <input type="tel" name="match" class="smallerInput" id="matchNumberInput" required>
-                <select name="level" class="lowerSelect">
-                    <option value="Practice" disabled>Practice</option>
-                    <option value="Qualification" selected>Qual</option>
-                    <option value="Upper" disabled>Upper</option>
-                    <option value="Lower" disabled>Lower</option>
-                </select>
-            </fieldset>
-            <fieldset>
-                <label>Team Number<br></label>
-                <select name="team" id="eventCode" style="min-width: 250px;">
-                    <optgroup label="Blue Alliance">
-                        <option value="" class="teamNumOption"></option>
-                        <option value="" class="teamNumOption"></option>
-                        <option value="" class="teamNumOption"></option>
-                    </optgroup>
-                    <optgroup label="Red Alliance">
-                        <option value="" class="teamNumOption"></option>
-                        <option value="" class="teamNumOption"></option>
-                        <option value="" class="teamNumOption"></option>
-                    </optgroup> 
-                </select>
-            </fieldset><br>
+            <fieldset><label>Event Code<span id="badEvent" style="color: red; display: none;"></span><br></label><select name="event" id="eventCode"><option value="CADA">CADA - Sacramento Regional</option><option value="CASJ">CASJ - Silicon Valley Regional</option><option value="WOOD">WOOD - CalGames</option><option value="CCCC" selected>CCCC - Capital City Classic</option></select></fieldset>
+            <fieldset><label>Match Number<span id="badMatchNum" style="color: red; display: none;"></span><br></label><input type="tel" name="match" class="smallerInput" id="matchNumberInput" required><select name="level" class="lowerSelect"><option value="Practice" disabled>Practice</option><option value="Qualification" selected>Qual</option><option value="Upper" disabled>Upper</option><option value="Lower" disabled>Lower</option></select></fieldset>
+            <fieldset><label>Team Number<br></label><select name="team" id="teamNumber" style="min-width: 250px;"><optgroup label="Blue Alliance"><option value="" class="teamNumOption"></option><option value="" class="teamNumOption"></option><option value="" class="teamNumOption"></option></optgroup><optgroup label="Red Alliance"><option value="" class="teamNumOption"></option><option value="" class="teamNumOption"></option><option value="" class="teamNumOption"></option></optgroup></select></fieldset><br>
             <h2 class="gameflair1">Match Scouting</h2>
+            <br><label><strong class="vstrong">During AUTO, the robot...</strong></label>
+            <fieldset><br><input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY<br></span><br><input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br><input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br><input value="true" type="checkbox" name="game4" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br><input value="0" type="radio" name="game5" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br><input value="8" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED, not ENGAGED<br></span><br><input value="12" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br></fieldset>
             <p id="landscapeReminder" style="display: none; color: red;">Consider turning your device for the grid</p>
-            <p>Select only grid squares that the robot you are scouting fills.</p>
-            <fieldset>
-                <input value="000000000000000000000000000" type="text" name="game12" id="griddata" hidden>
-                <br><label><strong class="vstrong">During AUTO, the robot...</strong></label>
-                <fieldset><br>
-                    <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY<br></span><br>
-                    <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
-                    <input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
-                    <input value="true" type="checkbox" name="game4" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
-                    <input value="0" type="radio" name="game5" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br>
-                    <input value="8" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED, not ENGAGED<br></span><br>
-                    <input value="12" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br>
-                </fieldset>
-                <p><strong>Top of grid</strong></p>
-                <div class="sg">
-                    <!--Grid row 1-->
-                    <div class="sg-c" data-coop="false" data-num="0" id="sgc_1_1" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="1" id="sgc_1_2" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="false" data-num="2" id="sgc_1_3" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="true" data-num="3" id="sgc_1_4" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="true" data-num="4" id="sgc_1_5" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="true" data-num="5" id="sgc_1_6" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="6" id="sgc_1_7" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="7" id="sgc_1_8" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="false" data-num="8" id="sgc_1_9" data-state="0" data-gp="cone"></div>
-                    <!--Grid row 2-->
-                    <div class="sg-c" data-coop="false" data-num="9" id="sgc_2_1" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="10" id="sgc_2_2" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="false" data-num="11" id="sgc_2_3" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="true" data-num="12" id="sgc_2_4" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="true" data-num="13" id="sgc_2_5" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="true" data-num="14" id="sgc_2_6" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="15" id="sgc_2_7" data-state="0" data-gp="cone"></div>
-                    <div class="sg-c" data-coop="false" data-num="16" id="sgc_2_8" data-state="0" data-gp="cube"></div>
-                    <div class="sg-c" data-coop="false" data-num="17" id="sgc_2_9" data-state="0" data-gp="cone"></div>
-                    <!--Grid row 3-->
-                    <div class="sg-c" data-coop="false" data-num="18" id="sgc_3_1" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="false" data-num="19" id="sgc_3_2" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="false" data-num="20" id="sgc_3_3" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="true" data-num="21" id="sgc_3_4" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="true" data-num="22" id="sgc_3_5" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="true" data-num="23" id="sgc_3_6" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="false" data-num="24" id="sgc_3_7" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="false" data-num="25" id="sgc_3_8" data-state="0" data-gp="h"></div>
-                    <div class="sg-c" data-coop="false" data-num="26" id="sgc_3_9" data-state="0" data-gp="h"></div>
-                </div>
-                <p><strong>Bottom of grid</strong></p>
-            </fieldset>
+            <p>select all grid squares that the robot fills (incl. auto)</p>
+            <fieldset><input value="000000000000000000000000000" type="text" name="game12" id="griddata" hidden><p><strong>Top of grid</strong></p><div class="sg"></div><p><strong>Bottom of grid</strong></p></fieldset>
             <br><label><strong class="vstrong">During TELEOP, the robot...</strong></label>
-            <fieldset><br>
-                <input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
-                <input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
-                <input value="true" type="checkbox" name="game8" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
-                <input value="true" type="checkbox" name="game9" class="checkbig"><span>&emsp;COOPERTITION bonus<br></span><br>
-                <input value="0" type="radio" name="game10" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br>
-                <input value="2" type="radio" name="game10" class="checkbig"><span>&emsp;PARKED (in COMMUNITY)<br></span><br>
-                <input value="6" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and not ENGAGED<br></span><br>
-                <input value="10" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br>
-            </fieldset>
-            <input value="0" type="number" name="game13" hidden>
-            <input value="0" type="number" name="game14" hidden>
-            <input value="0" type="number" name="game15" hidden>
-            <input value="0" type="number" name="game16" hidden>
-            <input value="0" type="number" name="game17" hidden>
-            <input value="0" type="number" name="game18" hidden>
-            <input value="0" type="number" name="game19" hidden>
-            <input value="0" type="number" name="game20" hidden>
-            <input value="0" type="number" name="game21" hidden>
-            <input value="0" type="number" name="game22" hidden>
-            <input value="0" type="number" name="game23" hidden>
-            <input value="0" type="number" name="game24" hidden>
-            <input value="0" type="number" name="game25" hidden>
-            <br>
-            <h2 class="gameflair1">Post Game</h2>
-            <fieldset>
-                <label>Cycle time <span id="tooLong" style="color: red; display: none;">must be a number, 0 - 120 (use 120 for no scoring)</span><br></label><br>
-                <input type="tel" name="game11" class="smallerInput" id="validateLength" required> seconds
-            </fieldset>
-            <fieldset>
-                <label>Did the robot play defense? Explain.<br><br></label>
-                <textarea rows="2" cols="30" name="defend"></textarea>
-            </fieldset>
-            <fieldset>
-                <label>Thoughts about driving<br><br></label>
-                <textarea rows="2" cols="30" name="driving"></textarea>
-            </fieldset>
-            <fieldset>
-                <label>Overall assessment<br><br></label>
-                <textarea rows="4" cols="30" name="overall"></textarea>
-            </fieldset>
-            <br>
-            <p style="text-align:center">
-                <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton" disabled="disabled">Submit</button><br><br>
-                <button type="button" class="uiButton cancelButton" onclick="window.location.href='/'">Back</button><br><br>
-            </p>
+            <fieldset><br><input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br><input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br><input value="true" type="checkbox" name="game8" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br><input value="true" type="checkbox" name="game9" class="checkbig"><span>&emsp;COOPERTITION bonus<br></span><br><input value="0" type="radio" name="game10" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br><input value="2" type="radio" name="game10" class="checkbig"><span>&emsp;PARKED (in COMMUNITY)<br></span><br><input value="6" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and not ENGAGED<br></span><br><input value="10" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br></fieldset>
+            <input value="0" type="number" name="game13" hidden><input value="0" type="number" name="game14" hidden><input value="0" type="number" name="game15" hidden><input value="0" type="number" name="game16" hidden><input value="0" type="number" name="game17" hidden><input value="0" type="number" name="game18" hidden><input value="0" type="number" name="game19" hidden><input value="0" type="number" name="game20" hidden><input value="0" type="number" name="game21" hidden><input value="0" type="number" name="game22" hidden><input value="0" type="number" name="game23" hidden><input value="0" type="number" name="game24" hidden><input value="0" type="number" name="game25" hidden>
+            <br><h2 class="gameflair1">Post Game</h2>
+            <fieldset><label>Cycle time <span id="tooLong" style="color: red; display: none;">must be a number, 0 - 120 (use 120 for no scoring)</span><br></label><br><input type="tel" name="game11" class="smallerInput" id="validateLength" required> seconds</fieldset>
+            <fieldset><label>Did the robot play defense? Explain.<br><br></label><textarea rows="2" cols="30" name="defend" required></textarea></fieldset>
+            <fieldset><label>Thoughts about driving<br><br></label><textarea rows="2" cols="30" name="driving" required></textarea></fieldset>
+            <fieldset><label>Overall assessment<br><br></label><textarea rows="4" cols="30" name="overall" required></textarea></fieldset><br>
+            <p style="text-align:center"><button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton" disabled="disabled">Submit</button><br><br><button type="button" class="uiButton cancelButton" onclick="window.location.href='/'">Back</button><br><br></p>
         </form>
         <div class="dummy" id="submitUi" style="display: none;">
             <h1 style="padding-top: 25vh" id="submitText_d">Submitting...</h1>
-            <progress style="min-width: 75vw;" id="submitProgress_d"></progress>
-            <br>
+            <progress style="min-width: 75vw;" id="submitProgress_d"></progress><br>
             <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="reSubmitButton" style="display: none;">retry</button><br>
         </div>
         <script type="module" src="js/main_form/main_form.min.js"></script>
