--- a/src/create.html
+++ b/src/create.html
@@ -3,13 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Create Account - bearTracks</title>
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
@@ -23,8 +19,7 @@
                     <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
                     <label for="access">Team Join Code</label><br><input type="tel" name="access" class="credInput" required><br><br>
                     <label for="fullName">Full Name</label><br><input type="text" name="fullName" autocomplete="name" class="credInput" required><br><br>
-                    <label for="nickName">Short Name</label><br><input type="text" name="nickName" autocomplete="given-name" class="credInput" autocapitalize="none" required><br><br>
-                    <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" class="credInput" required><br><br>
+                    <label for="nickName">Username (identifiable)</label><br><input type="text" name="username" autocomplete="username" class="credInput" autocapitalize="none" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="new-password" class="credInput" minlength="8" maxlength="2048" required><br><br><br>
                     <button type="submit" class="uiButton actionButton">Create Account</button>
                 </form>
