--- a/src/browse.html
+++ b/src/browse.html
@@ -43,36 +43,7 @@
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">browse data</span></h1>
                 <h3 id="teamAtEvent"></h3>
-                <div style="overflow-x: auto; width: 95vw;">
-                    <table>
-                        <tr>
-                            <th rowspan="2">Match Number</th>
-                            <th>Auto Score</th>
-                            <th rowspan="2">Auto Charge</th>
-                            <th>Teleop Score</th>
-                            <th rowspan="2">Teleop Charge</th>
-                            <th rowspan="2">Grid Points</th>
-                            <th colspan="3">Cubes</th>
-                            <th colspan="3">Cones</th>
-                            <th colspan="3">Total</th>
-                            <th rowspan="2">Cycle Time</th>
-                            <th rowspan="2">Match Performance Score</th>
-                        </tr>
-                        <tr id="subheadings">
-                            <th>B/M/T</th>
-                            <th>B/M/T</th>
-                            <th>Low</th>
-                            <th>Mid</th>
-                            <th>High</th>
-                            <th>Low</th>
-                            <th>Mid</th>
-                            <th>High</th>
-                            <th>Low</th>
-                            <th>Mid</th>
-                            <th>High</th>
-                        </tr>
-                    </table>
-                </div>
+                <div style="overflow-x: auto; width: 95vw;"><table><tr><th rowspan="2">Match Number</th><th>Auto Score</th><th rowspan="2">Auto Charge</th><th>Teleop Score</th><th rowspan="2">Teleop Charge</th><th rowspan="2">Grid Points</th><th colspan="3">Cubes</th><th colspan="3">Cones</th><th colspan="3">Total</th><th rowspan="2">Cycle Time</th><th rowspan="2">Match Performance Score</th></tr><tr id="subheadings"><th>B/M/T</th><th>B/M/T</th><th>Low</th><th>Mid</th><th>High</th><th>Low</th><th>Mid</th><th>High</th><th>Low</th><th>Mid</th><th>High</th></tr></table></div>
                 <button type="button" class="uiButton returnButton" onclick="window.location.href = window.location.pathname;">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Home</button>
                 <br><br>
             </div>
