--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,14 @@
     <body class="dark-mode">
         <script>themeHandle()</script>
         <div class="container">
-            <div class="offlineAlert" id="offlineAlert" style="display: none">
-                <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
-            </div>
+            <div class="offlineAlert" id="offlineAlert" style="display: none"><span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline</div>
             <div>
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
-                    <a href="matches" class="gameflair1" style="order: 3; margin-bottom: 5%;">match list<br></a>
-                    <a href="browse" class="gameflair1" style="order: 4; margin-bottom: 5%;">browse data<br></a>
-                    <a href="manage" class="gameflair1" style="order: 5; margin-bottom: 5%; display: none;" id="additionalUrl">manage data<br></a>
+                    <a href="matches" class="gameflair1" style="order: 2; margin-bottom: 5%;">match list<br></a>
+                    <a href="browse" class="gameflair1" style="order: 3; margin-bottom: 5%;">browse data<br></a>
+                    <a href="manage" class="gameflair1" style="order: 4; margin-bottom: 5%; display: none;" id="additionalUrl">manage data<br></a>
                     <a href="manageTeam" class="gameflair1" style="order: 5; margin-bottom: 5%; display: none;" id="additionalUrl2">manage team<br></a>
                     <small style="order: 6"><a href="scouts" style="all: unset; margin-bottom: 7%;">top scouts</a></small>
                     <small style="order: 7"><a href="points" style="all: unset; margin-bottom: 7%;">points</a></small>
