--- a/src/login.html
+++ b/src/login.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <br><br>
-                <small style="text-align: center;" id="createAct"><a href="create" class="actLink">create account</a></small><br>
+                <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
                 <form style="display: none;" action="/loginForm" target="_self" method="POST" id="artForm"><input name="username" id="artUsername" hidden><input name="password" id="artPassword" hidden></form>
             </div>
         </div>
