--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -16,12 +16,7 @@
         <div class="container">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">manage teams</span></h1>
-                <div style="overflow-x: auto; width: 95vw;" id="mainsect">
-                    <table>
-                        <tr id="teamsTableHead"><th>Team</th><th>Code</th></tr>
-                    </table><br><br>
-                    <button type="button" class="uiButton actionButton" onclick="setupTeamKeyCreate()" id="newTeamKey_btn">add team</button><br>
-                </div>
+                <div style="overflow-x: auto; width: 95vw;" id="mainsect"><table><tr id="teamsTableHead"><th>Team</th><th>Code</th></tr></table><br><br><button type="button" class="uiButton actionButton" onclick="setupTeamKeyCreate()" id="newTeamKey_btn">add team</button><br></div>
                 <div id="createKey" style="display: none;">
                     <h2>Create Team Key</h2><br>
                     <label for="newTeamKey_key">Numeric Key</label><br><input type="tel" id="newTeamKey_key" class="credInput"><br><br><br>
