--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -19,7 +19,7 @@
                 <select id="deck">
                     <option value="assets/stdcards/" selected>Default Cards</option>
                     <option value="assets/progcards/">Programming Cards</option>
-                    <optgroup label="coming 'soon'"><option value="assets/gruvcards/" disabled>Gruvbox Cards</option></optgroup>
+                    <option value="assets/gruvcards/">Gruvbox Cards (beta i guess)</option>
                 </select><br><br>
                 <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
             </div>
