--- a/src/detail.html
+++ b/src/detail.html
@@ -17,11 +17,7 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">match data</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <fieldset>
-                    <fieldset>
-                        <h3>Team Number: <span id="resultTeamNum"></span></h3>
-                        <h5>Match Number: <span id="resultMatchNum"></span> | Event: <span id="resultEventCode"></span></h5>
-                        <p style="text-align: left" id="resultText"></p>
-                    </fieldset><br>
+                    <fieldset><h3>Team Number: <span id="resultTeamNum"></span></h3><h5>Match Number: <span id="resultMatchNum"></span> | Event: <span id="resultEventCode"></span></h5><p style="text-align: left" id="resultText"></p></fieldset><br>
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
             </div>
