--- a/src/manage.html
+++ b/src/manage.html
@@ -21,15 +21,13 @@
                 </fieldset>
                 <small style="text-align: center;"><a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">manage scouts</a></small><br>
                 <small style="text-align: center;"><a href="manageTeams" style="all: unset; color: var(--gameFlairColor);">manage teams</a></small><br>
-            </form>
-            <br><br>
+            </form><br><br>
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
-                <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button></fieldset>
-                <br><br>
+                <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button></fieldset><br><br>
             </div>
         </div>
         <script type="module" src="js/manage/manage.min.js"></script>
