--- a/src/manageTeam.html
+++ b/src/manageTeam.html
@@ -16,11 +16,7 @@
         <div class="container" style="display: flex;">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">manage team</span></h1>
-                <div style="overflow-x: auto; width: 95vw;">
-                    <table>
-                        <tr id="tableHeader"><th>Scout</th><th></th></tr>
-                    </table>
-                </div>
+                <div style="overflow-x: auto; width: 95vw;"><table><tr id="tableHeader"><th>Scout</th><th></th></tr></table></div>
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
             </div>
         </div>
