--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -17,11 +17,7 @@
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">point records</span></h1>
                 <fieldset>
-                    <fieldset>
-                        <table>
-                            <tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr>
-                        </table>
-                    </fieldset>
+                    <fieldset><table><tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr></table></fieldset>
                     <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
                 </fieldset>
